Speedup graph resolution process with simple class name -> component cache (#591)